# lerner

./: .gitignore  main.py  ml.md  pyproject.toml
advanced_functions/: af1.ipynb  args.ipynb  exercise_1.ipynb  exercise_2.ipynb  keyword_only_params.ipynb
async/: asyncio2024.ipynb  event_processing_exercises.ipynb  event_processing_exercises_blank.ipynb  event_processing_extra_blank.ipynb
comprehensions/: access_log.txt  c1.ipynb  passwd
iterators_generators/: itertools_exercises.ipynb
ml/: bias_variance.md  entropy.md  expected_value.md  odds_and_log_odds.md  odds_ratios_log_odds_ratios.md
pandas/: p1.ipynb
pandas_all/: mysql_api.py  p1.ipynb  pdb1.py  sqlalchemy_df_utils.py
pandas_sql/: examples_using_sqlalchemy_utils.py  lo.ipynb  sqlalchemy_df_utils.py  sqlalchemy_manual_utils.py
practice/: event_processing_extra_blank.ipynb  event_processing_patterns.ipynb  event_stream_processing_templates.ipynb  function_boilerplate.py  python_standard_library_practice_problems.ipynb  python_standard_library_practice_problems_complete.ipynb  regex_100_practice_problems.ipynb  regex_practice_problems.ipynb  string_parsing_exercises.ipynb
regexp/: r1.ipynb
